# try-egui-eframe

./: .env  .gitignore  Cargo.toml  README.md  Trunk.toml  index.html
assets/: sw.js
src/: app.rs  lib.rs  main.rs  myimage.rs  myshader.rs
src/oreb/: mod.rs  painter.wgsl
src/widgets/: mod.rs  player.rs
src/widgets/simple_image/: compute.wgsl  mod.rs  painter.rs  ui.rs
src/widgets/wavy_rects/: painter.rs  painter.wgsl  ui.rs
