[package]
name = "try_egui_eframe"
version = "0.1.0"
authors = ["Nathan Clack <nclack@gmail.com>"]
edition = "2021"
rust-version = "1.71"


[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [
    # "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "puffin",        # instrumentation profiler
] }
log = "0.4"
instant = { version = "0.1.12", features = ["wasm-bindgen"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
egui_extras = { version = "0.23.0", features = ["all_loaders"] }
puffin_egui = { version = "0.23.0", features = ["serde"] }
puffin = { version = "0.17.0", features = ["web"] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
pretty_env_logger = "0.5.0"
dotenv = "0.15.0"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
instant = "0.1.12"


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
